Home page display
To do:
add short link to table video

To Do - DAO + WebService for content page:
Erase values from input fields once inserted in database (coded but don't work)
need to add Read Update Delete and Find All web services

--- a/web/home/displayResults.html
+++ b/web/home/displayResults.html
@@ -1,9 +1,9 @@
 <div>
     <h3>Display results</h3>
     <div ng-repeat="result in results">
-        <iframe width="100" height="56" src="https://www.youtube.com/embed/{{result.shortLinkVideo}}" frameborder="0"></iframe>
-        <label>{{result.titleVideo}}</label>
-        <a href="{{result.linkVideo}}">{{result.linkVideo}}</a>
-        <span>{{result.descriptionVideo}}</span>
+        <iframe width="100" height="56" src="https://www.youtube.com/embed/L16v5HTeHzY" frameborder="0"></iframe>
+        <label>hello</label>
+        <a href="https://www.youtube.com/embed/L16v5HTeHzY">vegeta</a>
+        <span>first fight</span>
     </div>
 </div>
