--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,9 @@
     <title>Fire Up</title>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
 
     <script src="login/loginCtrl.js"></script>
     <script src="menu/menuCtrl.js"></script>
@@ -25,6 +26,7 @@
     <link href="menu/menu.css" style="test:css" rel="stylesheet" />
     <link href="settings/settings.css" style="test:css" rel="stylesheet" />
     <link href="index.css" style="test:css" rel="stylesheet" />
+    <!--<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" style="test:css" rel="stylesheet" />-->
 </head>
 
 <body>
