--- a/web/home/displayResults.html
+++ b/web/home/displayResults.html
@@ -1,9 +1,67 @@
 <div>
-    <h3>Display results</h3>
-    <div ng-repeat="result in results">
-        <iframe width="100" height="56" src="https://www.youtube.com/embed/L16v5HTeHzY" frameborder="0"></iframe>
-        <label>hello</label>
-        <a href="https://www.youtube.com/embed/L16v5HTeHzY">vegeta</a>
-        <span>first fight</span>
-    </div>
+    <!--<h6>Display results</h6>-->
+    <h3 ng-repeat="result in listResults">Hello {{result.titleVideo}}</h3>
+    <!--<h3>{{listResults}}</h3>
+    <!--<table>
+        <tr>
+            <td>
+                <iframe width="200" height="113" src="https://www.youtube.com/embed/L16v5HTeHzY" frameborder="0"></iframe>
+            </td>
+            <td class="resultsInfoHome">
+                <label class="titleInfoHome">GOKOU vs BEJITA</label>
+                <a class="linkInfoHome" href="https://www.youtube.com/embed/L16v5HTeHzY">vegeta</a>
+                <span class="descriptionInfoHome" >first fight</span>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe width="200" height="113" src="https://www.youtube.com/embed/_jrb0xac2XQ" frameborder="0"></iframe>
+            </td>
+            <td class="resultsInfoHome">
+                <label class="titleInfoHome">GOKOU vs BEJITA 2</label>
+                <a class="linkInfoHome" href="https://www.youtube.com/watch?v=_jrb0xac2XQ">gokou</a>
+                <span class="descriptionInfoHome" >second fight</span>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe width="200" height="113" src="https://www.youtube.com/embed/L16v5HTeHzY" frameborder="0"></iframe>
+            </td>
+            <td class="resultsInfoHome">
+                <label class="titleInfoHome">GOKOU vs BEJITA</label>
+                <a class="linkInfoHome" href="https://www.youtube.com/embed/L16v5HTeHzY">vegeta</a>
+                <span class="descriptionInfoHome" >first fight</span>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe width="200" height="113" src="https://www.youtube.com/embed/_jrb0xac2XQ" frameborder="0"></iframe>
+            </td>
+            <td class="resultsInfoHome">
+                <label class="titleInfoHome">GOKOU vs BEJITA 2</label>
+                <a class="linkInfoHome" href="https://www.youtube.com/watch?v=_jrb0xac2XQ">gokou</a>
+                <span class="descriptionInfoHome" >second fight</span>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe width="200" height="113" src="https://www.youtube.com/embed/L16v5HTeHzY" frameborder="0"></iframe>
+            </td>
+            <td class="resultsInfoHome">
+                <label class="titleInfoHome">GOKOU vs BEJITA</label>
+                <a class="linkInfoHome" href="https://www.youtube.com/embed/L16v5HTeHzY">vegeta</a>
+                <span class="descriptionInfoHome" >first fight</span>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe width="200" height="113" src="https://www.youtube.com/embed/_jrb0xac2XQ" frameborder="0"></iframe>
+            </td>
+            <td class="resultsInfoHome">
+                <label class="titleInfoHome">GOKOU vs BEJITA 2</label>
+                <a class="linkInfoHome" href="https://www.youtube.com/watch?v=_jrb0xac2XQ">gokou</a>
+                <span class="descriptionInfoHome" >second fight</span>
+            </td>
+        </tr>
+    </table>-->
 </div>
