--- a/web/menu/menu.html
+++ b/web/menu/menu.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="menuController">
     <div id="navigation" >
         <a ui-sref=".home">home</a>
         <a ui-sref=".profile">profile</a>
